# kinect-football

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  FRAMEWORK_README.md  GAME_SYSTEM_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md
.claude/: workflow-state.json
.claude/designs/: intro-options.md  v1.1-improvements.md
.claude/plans/: intro-options.md  kinect-football-v1.md  v1.1-improvements.md
examples/: game_example.cpp
include/: DisplayConfig.h  GameConfig.h  KickTypes.h  UITheme.h  VectorMath.h  common.h
src/: main.cpp  main_console.cpp
src/core/: BodyTracker.cpp  BodyTracker.h  KinectDevice.cpp  KinectDevice.h  PlayerTracker.cpp  PlayerTracker.h  RingBuffer.h
src/game/: AccuracyChallenge.cpp  AccuracyChallenge.h  CMakeLists.txt  ChallengeBase.cpp  ChallengeBase.h  GameManager.cpp  GameManager.h  PenaltyShootout.cpp  PenaltyShootout.h  PowerChallenge.cpp  PowerChallenge.h  README.md  ScoringEngine.cpp  ScoringEngine.h
src/gui/: Application.cpp  Application.h
src/kiosk/: KioskManager.cpp  KioskManager.h  SessionManager.cpp  SessionManager.h
src/motion/: HeaderDetector.cpp  HeaderDetector.h  KickAnalyzer.cpp  KickAnalyzer.h  KickDetector.cpp  KickDetector.h  MotionAnalysisExample.cpp  MotionHistory.cpp  MotionHistory.h  README.md
